style modularity: modular css files

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -17,7 +12,7 @@
 
 body {
   overflow: auto;
-  font-family: 'Funnel Display', 'M PLUS Rounded 1c', sans-serif;
+  font-family: "Funnel Display", "M PLUS Rounded 1c", sans-serif;
   font-weight: 500;
   overflow-x: hidden;
   color: white;
@@ -31,998 +26,9 @@ body {
 }
 
 /* thumb is controlled by viewport, use max-height */
-::-webkit-scrollbar-thumb { 
-  width: 10px; 
+::-webkit-scrollbar-thumb {
+  width: 10px;
   height: 4px;
   background-color: var(--white-transparent);
   border-radius: 12px;
-}
-
-/* music player */
-
-#music-section {
-  background-color: black;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 5.3rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-self: center;
-  padding: 0.2rem 0.9rem 0.9rem 0.9rem;
-  z-index: 100; 
-}
-
-#player-middle, #player-left, #player-right {
-  width: 33.3%
-}
-
-#player-middle {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#player-left {
-}
-
-#player-right {
-}
-
-.music-cover {
-  width: 56px;
-  height: 56px;
-  border-radius: 4px;
-}
-
-.music-info {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.music-text {
-  display: flex;
-  flex-direction: column;
-  margin-left: 1rem;
-}
-
-#music-buttons {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 0.4rem;
-}
-
-.music-button {
-  border-radius: 50%;
-  width: 32px;
-  height: 32px;
-  margin: 0 0.5rem 0 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  pointer-events: stroke;
-}
-
-.music-button:hover {
-  cursor: pointer;
-}
-
-#play {
-  padding: 7px;
-  background-color: white;
-}
-
-.music-title {
-  font-size: 0.9rem;
-}
-
-.music-artist {
-  font-size: 0.8rem;
-  color: grey;
-}
-
-.music-time {
-  font-size:  0.75rem;
-  color: grey;
-}
-
-input[type="range"]::-ms-fill-lower {
-  background: #ffae00; /* Blue for the filled part */
-  border-radius: 4px;
-}
-
-input[type="range"]::-ms-fill-upper {
-  background: #ddd; /* Light gray for the unfilled part */
-  border-radius: 4px;
-}
-
-#progress-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
-#bar-full {
-  position: relative;
-  width: 300px;
-  height: 4px;
-  background-color: grey;
-  border-radius: 4px;
-}
-
-#bar-fill {
-  position: absolute;
-  width: 0%;
-  height: 4px;
-  background-color: white;
-  transition: width 0.05s linear;
-  border-radius: 4px;
-}
-
-
-/* new top */
-
-#bar {
-  display: flex;
-  align-items: center;
-  height: 3.75rem;
-  background-color: var(--color-black);
-  position: relative;
-}
-
-#contact-btn {
-  margin-left: 1rem;
-  cursor: pointer;
-  background-color: rgb(241, 55, 55);
-  padding: 8px;
-  border-radius: 8px;
-}
-
-.icon-wrapper {
-  padding: 8px;
-  background-color: var(--color-dark-grey);
-  border-radius: 64px;
-  margin: 0rem 0.5rem 0rem 0.5rem;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.icon-active-wrapper {
-  padding: 8px;
-  background-color: white;
-  border-radius: 64px;
-  margin: 0rem 0.5rem 0rem 0.5rem;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.icon-wrapper:hover {
-  background-color: #818182;
-}
-
-#home-icon {
-  width: 32px;
-  border: 0.5px solid transparent;
-}
-
-/* new front */
-
-#main {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-  margin: 1rem;
-  max-height: calc(100vh - 4.5rem - 7rem);
-}
-
-#link-list {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--color-dark-grey);
-  border-radius: 16px;
-  align-items: center;
-  max-width: 374px;
-  overflow-y: auto;
-}
-
-#content-display {
-  width: 80%;
-  /* 100vh - <top_height> - <bottom-height> */
-}
-
-#link-list .link {
-  display: flex;
-  padding: 1rem;
-  border-radius: 0.5rem;
-}
-
-#link-list .link:hover {
-  background-color: dimgray;
-  border-radius: 0.5rem;
-}
-
-.active-link {
-  background-color: rgb(47, 46, 46);
-}
-
-#link-list .link-img {
-  width: 64px;
-  height: 64px;
-  border-radius: 12px;
-}
-
-#link-list .link p {
-  margin-left: 1rem;
-}
-
-.link-title {
-  font-size: 1rem;
-}
-
-.link-info {
-  color: #818182;
-  font-size: 0.9rem;
-}
-
-/* about content */
-#about-content {
-  background-color: var(--color-dark-grey);
-  overflow-y: scroll;
-  height: calc(100vh - 4.5rem - 7rem);
-  border-radius: 1rem;
-}
-
-#profile {
-  min-width: 256px;
-  max-height: 256px;
-}
-
-#profession {
-  font-size: 28px;
-  font-weight: 200;
-  color: #818182;
-}
-
-#about-top { 
-  height: auto;
-  gap: 2rem;
-  align-items: flex-end;
-}
-
-#about-bio { 
-  margin: 2rem 0 2rem 0;
-}
-
-#socials {
-  display: flex;
-  flex-direction: row;
-  margin: 1rem 0 1rem 0;
-}
-
-.social-icon {
-  padding: 12px;
-  background-color: rgba(235, 129, 63, 0.935);
-  border: transparent 1px solid;
-  border-radius: 1rem;
-  margin-right: 0.5rem;
-}
-
-.social-icon:hover {
-  background-color: rgb(244, 98, 20);
-}
-
-/* project */
-
-#proj-container {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-}
-
-#proj-card-container {
-  background-color: var(--color-dark-grey);
-  display: flex; 
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-  padding: 2rem;
-  overflow-y: scroll;
-  background-color: var(--color-dark-grey);
-  border-radius: 1rem;
-  height: calc(100vh - 4.5rem - 7rem);
-}
-
-#proj-info-display {
-  background-color: var(--color-dark-grey);
-  border-radius: 12px;
-  min-width: 300px;
-  height: calc(100vh - 4.5rem - 7rem);
-  padding: 1.5rem;
-  max-width: 300px;
-  overflow-y: auto;
-  position: relative;
-}
-
-.proj-card {
-  margin: 1rem;
-}
-
-.proj-img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 12px;
-}
-
-.proj-txt {
-  max-width: 200px;
-}
-
-.proj-title {
-  margin-top: 0.5rem;
-}
-
-.proj-authors {
-  color: #818182;
-}
-
-#proj-authors {
-  color: #818182;
-  margin: 0rem 0rem 1rem 0rem;
-  min-height: 48px;
-}
-
-#proj-lg-title {
-  font-size: x-large;
-  margin: 1rem 0rem 1rem 0rem
-}
-
-.proj-info-img {
-  border-radius: 0.5rem;
-  height: 250px;
-  object-fit: cover;
-}
-
-#github-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  background-color: black;
-  margin: 0 -1.5rem 0rem -1.5rem;
-  padding: 1.1rem 0rem 1.25rem 0rem;
-  border: 1px solid rgb(38, 36, 36);
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-}
-
-#github-links img, svg {  
-  width: 28px;
-  height: 28px;
-}
-
-#github-link {
-  /* margin: 0 -2rem -2rem -2rem; */
-}
-
-/* experience */
-#exp-container {
-  padding: 2rem 6rem 2rem 6rem;
-  background-color: var(--color-dark-grey);
-  overflow-y: scroll;
-  height: calc(100vh - 4.5rem - 7rem);
-  border-radius: 1rem;
-}
-
-.exp-type {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-}
-
-.exp {
-  display: flex;
-  flex-direction: row;
-  margin: 0 0 2.5rem 0;
-}
-
-.exp-img {
-  width: 200px;
-  height: 200px;
-}
-
-.exp-txt {
-  margin-left: 1rem;
-}
-
-.company {
-  font-size: 2rem;
-}
-
-.exp-title {
-  font-size: 1.5rem;
-}
-
-.exp-period {
-  color: grey
-}
-
-.exp-desc {
-  font-weight: 100;
-}
-
-/* home */
-
-#home-sec {
-  border-radius: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@keyframes pan {
-  0% {
-    background-position: 0 0;
-  }
-  100% {
-    background-position: 1000px 1000px;
-  }
-}
-
-#version-container {
-  padding: 2rem 20rem 2rem 6rem;
-  background-color: var(--color-dark-grey);
-  overflow-y: scroll;
-  height: calc(100vh - 4.5rem - 7rem);
-  border-radius: 1rem;
-}
-
-.version {
-  font-size: 2.5rem;
-}
-
-.version-date {
-  font-size: 1.5rem;
-  color: grey;
-  margin-bottom: 0.5rem;
-}
-
-.version-point {
-  list-style-type: circle;
-  color: rgb(214, 214, 214);
-  margin-left: 4rem;
-}
-
-/* education */
-#edu-container {
-  position: relative;              
-  padding: 2rem 20rem 2rem 6rem;  
-  background-color: var(--color-dark-grey);
-  overflow-y: scroll;
-  height: calc(100vh - 4.5rem - 7rem);
-  border-radius: 1rem;
-}
-
-.section-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;                    
-  height: 30%;                     
-  min-height: 200px;               
-  background-image: url('src/assets/bg/bg-tokyo.png');
-  background-size: cover;
-  background-position: center;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  z-index: 0;                     
-}
-
-/* ensure content appears above background */
-#edu-container > *:not(.section-bg) {
-  position: relative;
-  z-index: 1;                     
-}
-
-#uni {
-  font-size: 3rem;
-}
-
-#uni-location {
-  font-size: 2rem;
-
-}
-
-#uni-range {
-  font-size: 2rem;
-
-}
-
-#degree {
-  font-size: 2rem;
-
-}
-
-.special {
-  font-size: 1.5rem;
-}
-
-/* elements */
-
-
-html {
-  scroll-behavior: smooth;
-}
-
-h1 {
-  word-break: nowrap;
-}
-
-/* navbar component */
-
-.nb-sec {
-  position: fixed;
-  background-color: var(--color-primary);
-  opacity: 98%;
-  padding: 24px;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  font-size: smaller;
-  color: white;
-  z-index: 64;
-}
-
-#left {
-  width: 40%;
-  display: flex;
-  justify-content: left;
-  align-items: center;
-}
-
-#center {
-  width: 20%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#right {
-  width: 40%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nb-sec ul {
-  gap: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nb-sec ul li {
-  list-style-type: none;
-}
-
-.nb-sec li a {
-  text-decoration: none;
-}
-
-/* front page component */
-
-.front-sec {
-  background-color: var(--color-primary);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 48px;
-  border: transparent;
-  border-radius: 20px ;
-}
-
-#socials {
-  display: flex;
-}
-
-#front-links {
-  display: flex;
-}
-
-/* about component */
-
-#about {
-  scroll-margin-top: 100px;
-}
-
-#about-title {
-  font-size: 50px;
-  scroll-margin-top: 100px;
-}
-
-.about-section {
-  color: white;
-  width: 80%;
-  margin: auto;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  min-height: 300px; /* or any fixed height */
-}
-  
-#profile-container {
-  background-color: rgba(17,17,82,255);
-  margin-top: 24px;
-  border: transparent 1px solid;
-  border-radius: 16px;
-  display: flex;
-  justify-content: center;
-}
-
-.about-text { 
-  display: flex;
-  justify-content: center;
-  align-items: left;
-  flex-direction: column;
-  margin: 0px 36px 36px 36px;
-}
-
-.about-text p {
-  margin-bottom: 12px;
-  background-color: rgb(255,238,173);
-  color: black;
-  padding: 16px;
-  border: transparent 1px solid;
-  border-radius: 8px;
-}
-
-.about-content .about-text ul {
-  display: flex;
-  margin-top: 4px;
-}
-
-.about-content .about-text ul li {
-  margin-right: 16px;
-}
-
-.social-icons {
-  padding: 12px;
-  background-color: rgb(37, 150, 190);
-  border: transparent 1px solid;
-  border-radius: 36px;
-}
-
-.social-icons:hover {
-  background-color: rgb(102, 190, 220);
-}
-
-/* skills component */
-
-.skill-sec {
-  color: black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.skill-container {
-  border: rgb(20,195,141) 8px solid;
-  border-radius: 24px;
-  padding: 16px;
-  background-color: rgb(255,238,173);
-  transition: transform ease-in 0.2s;
-}
-
-.skill-container:hover {
-  transform: scale(1.05, 1.05);
-}
-
-#skill {
-  scroll-margin-top: 24px;
-}
-
-#skill-title {
-  font-size: 50px;
-  margin: 64px;
-  text-align: center;
-  color: white;
-  scroll-margin-top: 100px;
-}
-
-#skill-small-title {
-  font-size: 25px;
-}
-
-.skill-icons img {
-  padding: 8px;
-  transition: transform ease-in 0.2s;
-}
-
-.skill-icons img:hover {
-  transform: scale(1.2, 1.2);
-}
-
-#languages {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 24px;
-  width: 400px; 
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-}
-
-#frameworks {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 24px;
-  width: 400px; 
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-}
-
-#envir {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 24px;
-  width: 400px; 
-  justify-content: center;
-  align-items: center;
-  border-radius: 8px;
-}
-
-/* project component */
-
-.project-section {
-  padding: 40px 40px;
-  color: white;
-}
-
-#project {
-  scroll-margin-top: 80px;
-}
-
-#project-title {
-  font-size: 50px;
-  text-align: center;
-  margin: 72px 72px 24px 72px;
-}
-
-.project-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;  
-  flex-wrap: wrap;
-  min-height: 350px; /* i.e. or enough height for all sets */
-}
-
-.project-links .repo #project-header {
-  font-weight: heavy;
-  color: black;
-  background-color: rgb(255,238,173);
-  border-radius: 8px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-#not-available {
-  margin: 4px 0px 4px 0px;
-  color: darkslategrey;
-}
-
-.project-buttons-section {
-  display: flex;
-  justify-content: center;
-  margin-top: 16px;
-}
-
-.project-buttons {
-  color: black;
-  border-radius: 24px;
-  padding: 12px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: 12px;
-  margin-right: 12px;
-}
-
-.project-image {
-  border-radius: 8px;
-  min-height: 225px;
-  width: auto;
-  object-fit: cover;
-}
-
-.project-icons {
-  width: 32px;
-}
-
-.repo {
-  background-color: rgb(255,238,173);
-  border-radius: 8px;
-  margin: 48px;
-  min-width: 265px;
-  max-width: 265px; /* fixed width */
-  text-align: center;
-  border: 4px solid rgb(20,195,141); /* reserves space for the repo hover to avoid the modal shifting slightly */
-}
-
-.repo:hover {
-  border: 4px yellow solid;
-}
-
-.repo-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin-top: 24px;
-  margin-bottom: 16px;
-  height: auto;
-}
-
-/* media query elements */
-
-#util-buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#hide-on-small {
-  display: none;
-}
-
-#heading-big {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 90px;
-  color: rgb(255, 157, 0);
-} 
-
-#heading-small {
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
-
-/* contact component */
-
-.contact-sec {
-  width: 100%;
-  padding: 72px;
-  margin-top: 96px;
-  display: flex;
-  background-color: var(--color-midnight);
-}
-
-.contact-sec-left {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: center;
-  width: 40%;
-}
-
-.contact-sec-right {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-}
-
-.contact-sec ul {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 12px;
-}
-
-/* media queries */
-
-@media screen and (max-width: 1100px) {
-  .nb-sec ul {
-    gap: 10px;
-  }
-  /* .nav-links {
-    display: none;
-  } */
-  /* #hide-on-small {
-    display: flex;
-  } */
-  #right {
-    justify-content: right;
-  } 
-  #heading-small {
-    display: flex;
-    font-size: 45px;
-  }
-}
-
-/* resume component */
-
-#resume-sec {
-  padding-top: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#resume-download {
-  padding: 15px;
-  margin: 24px;
-  border-radius: 24px;
-}
-
-#resume-sec iframe {
-  margin: 48px;
-}
-
-/* other */
-
-.front-button:hover {
-  background-image: repeating-linear-gradient(135deg, yellow, rgb(242,177,74), 7%, yellow 10%);
-  background-size: 200% 100%;
-  background-position: 0 0;
-  transition: background-position 0.5s ease; 
-}
-
-.pixel-art {
-  image-rendering: pixelated;
-  width: 50px;
-}
-
-#star-container {
-  position: relative;
-  background-color: rgb(26, 20, 195);
-  padding-top: 250px;
-  padding-bottom: 200px;
-  height: calc(100vh - 4.5rem - 7rem);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 1rem;
-  overflow: hidden;
-}
-
-#star-pattern {
-  background-image: url("https://assets.codepen.io/1468070/Star+Pattern+3.svg");
-  background-size: 18%;  
-  position: absolute;
-  left: 50%;
-  top: 0px;
-  translate: -50% 0%;
-  z-index: 1;
-  height: 100%;
-  width: 100%;
-  min-width: 1200px;
-  opacity: 0.10;
-  animation: pan 45s linear infinite;
-  will-change: background-position;
-  pointer-events: none;
-}
-
-@keyframes pan {
-  0% {
-    background-position: 0 0;
-  }
-  100% {
-    background-position: 1000px 1000px;
-  }
 }
