--- a/src/styles/educ.css
+++ b/src/styles/educ.css
@@ -4,7 +4,7 @@
   padding: 2rem 20rem 2rem 6rem;
   background-color: var(--color-dark-grey);
   overflow-y: scroll;
-  height: calc(100vh - 4.5rem - 5.5rem);
+  height: calc(100dvh - 4.5rem - 5.5rem);
   border-radius: 1rem;
 }
 
