--- a/src/styles/music.css
+++ b/src/styles/music.css
@@ -2,7 +2,7 @@
 
   #music-section {
     background-color: black;
-    position: relative;
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
