--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -18,12 +18,14 @@
   flex-direction: row;
 }
 
-.nav-bar-left, .nav-bar-right {
+.nav-bar-left,
+.nav-bar-right {
   flex-basis: 4rem;
   flex-shrink: 0;
 }
 
-.icon-active-wrapper, .icon-wrapper {
+.icon-active-wrapper,
+.icon-wrapper {
   padding: 0.5rem;
   background-color: white;
   border-radius: 4rem;
@@ -61,6 +63,80 @@
   outline: none;
   border: none;
   width: 100%;
-} 
+}
 
+.contact-button-wrapper {
+  background-color: white;
+  position: relative;
+  color: black;
+  width: 7.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.65rem;
+  border-radius: 3.8rem;
+  height: 2.5rem;
+  /* https://www.w3schools.com/cssref/css3_pr_box-shadow.php */
+  box-shadow: 
+  /* 1. A tighter, brighter inner glow */ 0 0.2rem 0.5rem
+      rgba(255, 255, 255, 0.15),
+    /* 2. A wider, softer outer glow */ 0 0.5rem 1.5rem rgba(255, 255, 255, 0.1);
+
+  outline: none;
+}
+
+/* :is() groups the hover targets */
+.contact-button-wrapper:hover {
+  cursor: pointer;
+}
+
+.contact-button-wrapper:hover .arrow-down {
+  display: block;
+}
+
+.contact-button-wrapper:hover .circle {
+  display: none;
+}
+
+.arrow-down {
+  display: none;
+}
+
+.popup-wrapper {
+  display: flex;
+  right: 0;
+  flex-direction: column;
+  position: absolute;
+  margin-top: calc(100dvh - 50dvh);
+  padding: 1rem;
+  width: 18rem;
+  height: fit-content;
+  margin-right: 1rem;
+  border-radius: 1rem;
+  background-color: rgba(255, 255, 255);
+  z-index: 200;
+}
+
+.social-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.social-redirect {
+  background-color: rgb(0, 0, 0);
+  color: rgb(114, 113, 113);
+  font-size: small;
+  width: 100%;
+  margin: 0 1rem 0 1rem;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  border-radius: 0.5rem;
+}
+
+.popup-social-icon {
+  width: 24px;
+  height: 24px;
+}
 
