--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,7 +10,8 @@
   --color-black: rgb(0, 0, 0);
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -23,16 +24,27 @@ body {
   background-color: black;
 }
 
-/* webkit */
+/* Style the entire scrollbar */
 ::-webkit-scrollbar {
-  width: 10px;
-  background-color: transparent;
+  width: 10px; /* Adjust width as needed */
+  height: 10px; /* Adjust height for horizontal scrollbars */
+  background-color: #5b099e; /* Background of the scrollbar area */
 }
 
-/* thumb is controlled by viewport, use max-height */
+/* Style the scrollbar track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background: #af0a0a;
+}
+
+/* Style the scrollbar thumb */
 ::-webkit-scrollbar-thumb {
-  width: 10px;
-  height: 4px;
-  background-color: var(--white-transparent);
-  border-radius: 12px;
+  background: #115903; /* Color of the scrollbar thumb */
+  border-radius: 10px;
+}
+
+/* Style the scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #0000c9;
 }
