--- a/src/archive/styles.css
+++ b/src/archive/styles.css
@@ -17,21 +17,11 @@
   --color-storm: #282b4b;
 }
 
-/* tailwindcss v4 base layer */
-@layer base {
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-  }
-}
-
 /* elements */
 
 body {
   overflow: auto;
-  font-family: 'Funnel Display', 'M PLUS Rounded 1c', sans-serif;
+  /* font-family: 'Funnel Display', 'M PLUS Rounded 1c', sans-serif; */
   font-weight: 500;
   overflow-x: hidden;
   color: white;
