--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,16 +1,34 @@
 /* About page styles */
 
+.about-wrapper {
+  overflow: hidden;
+  height: calc(100dvh - 4.5rem - 5.5rem);
+  border-radius: 1rem;
+}
+
 .about-content {
   background-color: var(--color-dark-grey);
   overflow-y: scroll;
-  height: calc(100dvh - 4.5rem - 5.5rem);
-  border-radius: 1rem;
+  height: 100%;
   padding: 4rem 5rem 4rem 5rem;
+}
+
+.about-content::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 1rem;
+  background-color: transparent;
+}
+
+.about-content::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 0;
 }
 
 #about-title {
   font-size: 50px;
   text-align: center;
+  font-family: "Lustria", serif;
+  font-weight: 400;
 }
 
 .about-section-title {
@@ -50,7 +68,7 @@
 }
 
 .about-bio-container {
-  max-width: 418px;
+  max-width: 580px;
 }
 
 .prog-languages {
