--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -160,4 +160,36 @@
   flex-shrink: 0; /* prevent logos from shrinking */
 }
 
+.project-button-wrapper {
+  background-color: white;
+  position: relative;
+  color: black;
+  width: fit-content;
+  padding: 0 1rem 0 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.65rem;
+  border-radius: 3.8rem;
+  height: 2.5rem;
+  /* https://www.w3schools.com/cssref/css3_pr_box-shadow.php */
+  box-shadow: 
+  /* 1. A tighter, brighter inner glow */ 0 0.2rem 0.5rem
+      rgba(255, 255, 255, 0.15),
+    /* 2. A wider, softer outer glow */ 0 0.5rem 1.5rem rgba(255, 255, 255, 0.1);
 
+  outline: none;
+}
+
+/* :is() groups the hover targets */
+.project-button-wrapper:hover {
+  cursor: pointer;
+}
+
+.project-button-wrapper:hover .arrow-down {
+  display: block;
+}
+
+.project-button-wrapper:hover .circle {
+  display: none;
+}
