--- a/src/styles/versions.css
+++ b/src/styles/versions.css
@@ -8,18 +8,44 @@
   border-radius: 1rem;
 }
 
-.version { font-size: 2.5rem; }
+.version { 
+  font-size: 2.5rem;
+  margin-top: 3rem;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+}
+
+.version:first-child {
+  margin-top: 0;
+}
 
 .version-date {
   font-size: 1.5rem;
-  color: grey;
-  margin-bottom: 0.5rem;
+  color: rgb(160, 160, 160);
+  margin-bottom: 1.5rem;
+  font-weight: 400;
 }
 
 .version-point {
   list-style-type: circle;
   color: rgb(214, 214, 214);
   margin-left: 4rem;
+  margin-bottom: 0.75rem;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.5rem;
+  transition: all 0.2s ease-in-out;
+  cursor: default;
+  line-height: 1.6;
 }
 
+.version-point:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+  color: rgb(230, 230, 230);
+  transform: translateX(4px);
+  padding-left: 1rem;
+}
+
+#version-container ul {
+  margin-bottom: 2rem;
+}
 
