feat: add cool particle effects

--- a/src/styles/music.css
+++ b/src/styles/music.css
@@ -1,7 +1,7 @@
   /* Music Player Styles */
 
   #music-section {
-    background-color: black;
+    background-color: transparent;
     position: absolute;
     bottom: 0;
     left: 0;
