--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,41 +1,108 @@
-/* Projects page and project components */
-
-#proj-container {
+.projects-page {
+  /* Box styling */
+  border-radius: 1rem;
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  overflow: hidden;
 }
 
-#proj-card-container {
-  background-color: var(--color-dark-grey);
+.projects-header {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 auto;
+  font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.projects-header h1 {
+  font-size: 76px;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.projects-header p {
+  margin-bottom: 4rem;
+  color: rgb(96, 96, 96);
+}
+
+.projects-container {
+  display: flex;
+  flex-direction: column;
+  /* Box styling */
+  background-color: #0f0f0f;
+  border-radius: 1rem;
+
+  /* Layout */
+  height: calc(100dvh - 4.5rem - 5.5rem);
+  overflow-y: auto;
+  flex: 1;
+
+  /* Spacing */
+  padding-top: 2rem;
+}
+
+.projects-container::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 1rem;
+  background-color: rgb(28, 29, 29);
+}
+.projects-container::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 0;
+}
+
+.projects {
+  background-color: #090909;
+}
+
+.projects-list {
+  /* Behavior */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2rem;
-  padding: 2rem;
-  overflow-y: scroll;
-  background-color: var(--color-dark-grey);
-  border-radius: 1rem;
-  height: calc(100dvh - 4.5rem - 5.5rem);
+  flex-direction: row;
+  margin-top: 2rem;
 }
 
 .proj-card {
+  /* Layout */
   margin: 1rem;
+  padding: 2rem;
+  min-height: 400px;
+  width: 400px;
+
+  /* Box styling */
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  border-radius: 12px;
+  background-color: #1c1c1c;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.25);
+
+  /* Animation */
+  transition: transform 0.5s;
+}
+
+.proj-card:hover {
+  transform: translateY(-4px);
 }
 
 .proj-img {
-  width: 200px;
+  width: 400px;
   height: 200px;
   object-fit: cover;
   border-radius: 12px;
 }
 
 .proj-txt {
-  max-width: 200px;
+  margin-bottom: 1.5rem;
+  max-width: 400px;
 }
+
 .proj-title {
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
+  font-size: 1.6rem;
 }
+
 .proj-authors {
   color: #818182;
 }
@@ -65,6 +132,7 @@
   background-color: var(--color-dark-grey);
   border-radius: 12px;
   min-width: 280px;
+  max-width: 280px;
   height: calc(100dvh - 4.5rem - 5.5rem);
   position: relative;
 }
@@ -73,6 +141,16 @@
   overflow-y: auto;
   height: calc(100% - 68px);
   padding: 1.5rem;
+}
+
+.proj-column-content::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 1rem;
+  background-color: rgb(28, 29, 29);
+}
+.proj-column-content::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 0;
 }
 
 .github-links {
@@ -105,4 +183,57 @@
 
 .github-link:hover {
   transform: scale(1.3) rotate(15deg);
+}
+
+.grid-row-toggle {
+  position: relative;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  border: 1px solid rgb(38, 36, 36);
+  border-radius: 2rem;
+}
+
+.grid-row-toggle::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  background: rgb(38, 36, 36);
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.grid-row-toggle > div:first-child {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+  padding: 0.3rem 0.4rem 0.3rem 0.6rem;
+}
+
+.grid-row-toggle > div:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  padding: 0.3rem 0.4rem 0.3rem 0.6rem;
+}
+
+.grid-row-toggle:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.projects-options {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  justify-content: flex-end;
+  margin-right: 2.5rem;
+  margin-top: 2rem;
 }
