--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Lustria&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -20,8 +21,8 @@
   --color-indigo: #1f1e39;
   --color-dark-grey: #1a1a1a;
   --color-black: rgb(0, 0, 0);
-  --color-accent: #ff6363;
-  --color-accent-hover: #ffa07a;
+  --color-accent: #63c1ff;
+  --color-accent-hover: rgb(255, 255, 255);
 }
 
 html {
