--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -15,6 +15,15 @@
   color: rgb(255, 157, 0);
 }
 
+.game-container {
+  height: calc(100dvh - 4.5rem - 5.5rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
 #star-container {
   position: relative;
   background-color: rgb(26, 20, 195);
