--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -10,15 +10,19 @@
 }
 
 .link-list-wrapper {
-  height: calc(100dvh - 4.5rem - 5.5rem);
+  height: calc(100dvh - 15rem - 5.5rem);
   overflow: hidden;
   border-radius: 1rem;
+    box-shadow: 
+  /* 1. Wider, softer glow visible on ALL sides */
+  0 0 20px rgba(0, 0, 0, 0.15),
+  /* 2. Slight directional weight to bottom-right for depth */
+  4px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .link-list {
-  background-color: var(--color-dark-grey);
+  background-color: var(--sand);
   height: 100%;
-  overflow-y: scroll;
 }
 
 .link-list::-webkit-scrollbar {
@@ -52,19 +56,19 @@
 }
 
 .link-list .link:hover {
-  background-color: dimgray;
+  background-color: var(--peach-glow);
   border-radius: 0.5rem;
 }
 
 .active-link {
-  background-color: rgb(47, 46, 46);
+  background-color: var(--peach-glow);
 }
 
 .link-list .link-img {
   width: 64px;
   height: 64px;
   min-width: 64px;
-  border-radius: 12px;
+  border-radius: 50%;
   object-fit: cover;
 }
 
@@ -73,7 +77,8 @@
 }
 
 .link-title {
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .link-info {
