--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -33,7 +33,7 @@
 }
 
 .icon-wrapper {
-  background-color: var(--color-dark-grey);
+  background-color: var(--murk);
 }
 
 .icon-wrapper:hover {
@@ -51,10 +51,9 @@
   display: flex;
   flex-direction: row;
   gap: 0.4rem;
-  background-color: var(--color-dark-grey);
+  background-color: var(--murk);
   color: #f2eeee;
   padding: 0.65rem 1rem 0.65rem 1rem;
-  border: 1px solid black;
   border-radius: 4rem;
   width: 500px;
 }
