--- a/src/styles/toggles.css
+++ b/src/styles/toggles.css
@@ -6,15 +6,16 @@
 }
 
 .active-btn {
-  background-color:rgb(0, 205, 241);
+  background-color: rgb(0, 205, 241);
 }
 
 .toggle-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid white;
-  box-shadow: 0 0 1px 1px white;
+  border: 2px solid black;
+  border-radius: 8px;
+  box-shadow: 5px 5px 0 black;
   width: 36px;
   height: 36px;
   margin-right: 0.5rem;
